--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <article class="card">
           <h4>IOC Hunting &amp; Threat Intelligence Enrichment</h4>
-         <p>Processed and enriched tens of thousands of indicators, performed reputation checks, and extracted IOCs to support CTI enrichment workflows for SOC investigations.</p>
+         <p>Processed and enriched 30,000+ indicators, performed reputation checks, and extracted IOCs to support CTI enrichment workflows for SOC investigations.</p>
           <div class="tags">
             <span class="tag">Threat Intel</span><span class="tag">IOC</span><span class="tag">Enrichment</span>
           </div>
