Update name and links in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Niknaz Sadehvandi — Cybersecurity Analyst Portfolio</title>
+  <title>Nikki Sadvand — Cybersecurity Analyst Portfolio</title>
 
-  <meta name="description" content="Portfolio of Niknaz Sadehvandi, Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk. MITRE ATT&CK, NIST, SOX ITGC." />
+  <meta name="description" content="Portfolio of Nikki Sadvand, Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations. Elastic SIEM, Sysmon, Zeek, Splunk. MITRE ATT&CK, NIST, SOX ITGC." />
   <meta name="robots" content="index,follow" />
 
-  <meta property="og:title" content="Niknaz Sadehvandi — Cybersecurity Analyst Portfolio" />
+  <meta property="og:title" content="Nikki Sadvand — Cybersecurity Analyst Portfolio" />
   <meta property="og:description" content="Elastic SIEM • Sysmon • Zeek • SOC Investigations • Splunk • MITRE ATT&CK • NIST • SOX ITGC" />
   <meta property="og:type" content="website" />
 
@@ -19,24 +19,24 @@
 <body>
   <main class="wrap">
     <header>
-      <h1>Niknaz Sadehvandi</h1>
+      <h1>Nikki Sadvand</h1>
       <h2>Cybersecurity Analyst • SIEM • Endpoint Telemetry • SOC Investigations</h2>
 
       <p class="meta">
         Matthews, NC •
         <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> •
-        <a href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a> •
-        <a href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
+        <a href="https://github.com/Nikki-65" target="_blank" rel="noopener">GitHub</a> •
+        <a href="https://www.linkedin.com/in/Nikki-Sadvand-a34179325" target="_blank" rel="noopener">LinkedIn</a>
       </p>
 
       <p class="lead">
-  Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
-  Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry,
-  and Windows security assessments aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC.
-</p>
+        Cybersecurity Analyst with experience in SIEM monitoring, endpoint telemetry, log analysis, and SOC investigations.
+        Founder of NS Cybersecurity, delivering Elastic SIEM ingestion pipelines, Sysmon and Zeek telemetry,
+        and Windows security assessments aligned with MITRE ATT&amp;CK, NIST, and SOX ITGC. [file:23]
+      </p>
 
       <div class="btnrow">
-        <a class="btn primary" href="Niknaz_Sadehvandi_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
+        <a class="btn primary" href="Nikki_Sadvand_Cybersecurity_Analyst_Resume.pdf" target="_blank" rel="noopener">
           Download Resume (PDF)
         </a>
         <a class="btn" href="#projects">Projects</a>
@@ -90,7 +90,7 @@
 
         <article class="card">
           <h4>IOC Hunting &amp; Threat Intelligence Enrichment</h4>
-         <p>Processed and enriched 30,000+ indicators, performed reputation checks, and extracted IOCs to support CTI enrichment workflows for SOC investigations.</p>
+          <p>Processed and enriched 30,000+ indicators, performed reputation checks, and extracted IOCs to support CTI enrichment workflows for SOC investigations.</p>
           <div class="tags">
             <span class="tag">Threat Intel</span><span class="tag">IOC</span><span class="tag">Enrichment</span>
           </div>
@@ -152,13 +152,13 @@
       <h3>Contact</h3>
       <div class="split">
         <a class="btn" href="mailto:sadvandniknaz0@gmail.com">Email</a>
-        <a class="btn" href="https://www.linkedin.com/in/niknaz-sadehvandi-a34179325" target="_blank" rel="noopener">LinkedIn</a>
-        <a class="btn" href="https://github.com/niknaz-65" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="https://www.linkedin.com/in/Nikki-Sadvand-a34179325" target="_blank" rel="noopener">LinkedIn</a>
+        <a class="btn" href="https://github.com/Nikki-65" target="_blank" rel="noopener">GitHub</a>
       </div>
     </section>
 
     <footer>
-      © <span id="y"></span> Niknaz Sadehvandi
+      © <span id="y"></span> Nikki Sadvand
     </footer>
   </main>
 
