Update location from Matthews, NC to Washington, DC

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h2>Cybersecurity Analyst • SIEM • Endpoint Telemetry • SOC Investigations</h2>
 
       <p class="meta">
-        Matthews, NC •
+        Wahington, DC •
         <a href="mailto:sadvandniknaz0@gmail.com">sadvandniknaz0@gmail.com</a> •
         <a href="https://github.com/Nikki-65" target="_blank" rel="noopener">GitHub</a> •
         <a href="https://www.linkedin.com/in/Nikki-Sadvand-a34179325" target="_blank" rel="noopener">LinkedIn</a>
